fix(days): slighlty too small days to know we can scroll

--- a/styles/popup.css
+++ b/styles/popup.css
@@ -50,7 +50,7 @@
   list-style-type: none;
   margin-right: 25px;
   margin: 0px 1px;
-  min-width: 33%;
+  min-width: 37%;
   text-align: center;
   background: #182065;
   font-family: arial,sans-serif;
